refactoring
git-svn-id: svn://109.206.40.61@80 62292e2b-fded-4b55-83dd-b5fccdba3bda